<resources>
    <string name="app_name">homework2V3</string>
    <string name="loginAccount">Login  To Your Account</string>
    <string name="email">Password</string>
    <string name="Pass">Email</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="login_Success">Login Complete</string>
    <string name="login_fail">Login fail</string>

</resources>
